# parallelism_NSU

./: README.md
lab_1/: CMakeLists.txt  README.md  main.cpp  makefile  sin_vec.cpp  sin_vec.hpp
